--- a/Arrijal_Abdul_Kholik_0110223043_UTSFORM01.html
+++ b/Arrijal_Abdul_Kholik_0110223043_UTSFORM01.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Entry Data Pegawai</title>
+    <title>UTS 01</title>
     <link rel="stylesheet" href="di.css">
 </head>
 <body>
